--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,7 +1,7 @@
-preload = ~/Pictures/bgwallpaper.png
+preload = ~/Pictures/romb.png
 
 # .. more preloads
 
-wallpaper = eDP-1,~/Pictures/bgwallpaper.png
+wallpaper = eDP-1,~/Pictures/romb.png
 
 # .. more monitors
