--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,7 +11,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080@60,auto,1
+monitor=eDP-1,1920x1080@60,auto,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -118,6 +118,9 @@ device:epic mouse V1 {
 
 windowrule=opacity 0.95 0.9,^(Spotify)$
 windowrule=tile,^(Spotify)$
+windowrule=opacity 0.95 0.9,Alacritty
+windowrule=opacity 0.95 0.9,Code
+windowrule=opacity 0.95 0.9,^(firefox)$
 
 blurls=hyprpaper
 
