--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -120,7 +120,7 @@ windowrule=opacity 0.95 0.9,^(Spotify)$
 windowrule=tile,^(Spotify)$
 windowrule=opacity 0.95 0.9,Alacritty
 windowrule=opacity 0.95 0.9,Code
-windowrule=opacity 0.95 0.9,^(firefox)$
+# windowrule=opacity 0.95 0.9,^(firefox)$
 
 blurls=hyprpaper
 
