--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -130,7 +130,7 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, nautilus
+bind = $mainMod, E, exec, nemo
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec,wofi --show drun -I -m -i
 bind = $mainMod, P, pseudo, # dwindle
