Update nemo extensions

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -3,5 +3,6 @@ preload = ~/Pictures/romb.png
 # .. more preloads
 
 wallpaper = eDP-1,~/Pictures/romb.png
+wallpaper = HDMI-A-1, ~/Pictures/romb.png
 
 # .. more monitors
