Add brightness lowering rate to 1% and add opacity to webcord

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,6 +119,7 @@ windowrule=opacity 0.95 0.9,^(Spotify)$
 windowrule=tile,^(Spotify)$
 windowrule=opacity 0.95 0.9,Alacritty
 windowrule=opacity 0.95 0.9,Code
+windowrule=opacity 0.95 0.9,WebCord
 # windowrule=opacity 0.95 0.9,^(firefox)$
 
 blurls=hyprpaper
@@ -136,7 +137,7 @@ bind = $mainMod, R, exec,wofi --show drun -I -m -i
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = ,xf86monbrightnessup,exec,brightnessctl set 5%+
-bind = ,xf86monbrightnessdown,exec,brightnessctl set 5%-
+bind = ,xf86monbrightnessdown,exec,brightnessctl set 1%-
 bind = SUPER_ SHIFT, S, exec, grim -g "$(slurp)"
 bind = $mainMod, L, exec, gtklock
 bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/usr/local/lib/spotify-adblock.so spotify
