Change to lavender scheme

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -51,7 +51,7 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = $rosewater
+    col.active_border = $lavender
     col.inactive_border = rgba(595959aa)
     damage_tracking=full
     layout = dwindle
