--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -62,7 +62,7 @@ decoration {
 
     rounding = 10
     blur = yes
-    blur_size = 3
+    blur_size = 8
     blur_passes = 1
     blur_new_optimizations = on
     blur_ignore_opacity = 1
@@ -120,6 +120,7 @@ windowrule=tile,^(Spotify)$
 windowrule=opacity 0.95 0.9,Alacritty
 windowrule=opacity 0.95 0.9,Code
 windowrule=opacity 0.95 0.9,WebCord
+windowrule=opacity 0.95 0.9,^(nemo)$
 # windowrule=opacity 0.95 0.9,^(firefox)$
 
 blurls=hyprpaper
