Change bg, and add webcord and gtk theming

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -121,6 +121,7 @@ windowrule=opacity 0.95 0.9,Alacritty
 windowrule=opacity 0.95 0.9,Code
 windowrule=opacity 0.95 0.9,WebCord
 windowrule=opacity 0.95 0.9,^(nemo)$
+windowrule=opacity 0.95 0.9,^(Wing 101)$
 # windowrule=opacity 0.95 0.9,^(firefox)$
 
 blurls=hyprpaper
