--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,8 +1,10 @@
-preload = ~/Pictures/romb.png
+#preload = ~/Pictures/romb.png
+preload = ~/Pictures/bgwallpaper.png
 
 # .. more preloads
 
-wallpaper = eDP-1,~/Pictures/romb.png
-wallpaper = HDMI-A-1, ~/Pictures/romb.png
+#wallpaper = eDP-1,~/Pictures/romb.png
+wallpaper = eDP-1,~/Pictures/bgwallpaper.png
+ipc = off
 
 # .. more monitors
