--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,7 +17,8 @@ monitor=eDP-1,1920x1080@60,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = nm-applet --indicator
