Add wlogout stuff and bitwarden blur

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -123,6 +123,7 @@ windowrule=opacity 0.95 0.9,Code
 windowrule=opacity 0.95 0.9,WebCord
 windowrule=opacity 0.95 0.9,^(nemo)$
 windowrule=opacity 0.95 0.9,^(Wing 101)$
+windowrule=opacity 0.95 0.9,^(Bitwarden)$
 # windowrule=opacity 0.95 0.9,^(firefox)$
 
 blurls=hyprpaper
