Change gtklock to 12 hour and add hyprpaper for external monitors

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -5,6 +5,7 @@ preload = ~/Pictures/bgwallpaper.png
 
 #wallpaper = eDP-1,~/Pictures/romb.png
 wallpaper = eDP-1,~/Pictures/bgwallpaper.png
+wallpaper = HDMI-A-1,~/Pictures/bgwallpaper.png
 ipc = off
 
 # .. more monitors
