Fix spotify shit

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -144,7 +144,7 @@ bind = ,xf86monbrightnessup,exec,brightnessctl set 5%+
 bind = ,xf86monbrightnessdown,exec,brightnessctl set 1%-
 bind = SUPER_ SHIFT, S, exec, grim -g "$(slurp)"
 bind = $mainMod, L, exec, gtklock
-bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/usr/local/lib/spotify-adblock.so spotify
+bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify
 
 # audio
 bind=,XF86AudioPlay,exec,playerctl --player=playerctld play-pause
