--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,9 +40,9 @@ input {
 
     touchpad {
         natural_scroll = yes
-        #disable_while_typing=1
+        disable_while_typing = 0
     }
-
+    
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
