Make everything more glassy

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,9 +40,9 @@ input {
 
     touchpad {
         natural_scroll = yes
-        disable_while_typing = 0
+        #disable_while_typing=0
     }
-    
+
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
@@ -72,6 +72,8 @@ decoration {
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
+
+#blurls=waybar
 
 animations {
     enabled = yes
@@ -109,21 +111,25 @@ device:epic mouse V1 {
     sensitivity = -0.5
 }
 
+misc {
+    no_vfr = false
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrule=opacity 0.95 0.9,^(Spotify)$
+windowrule=opacity 0.8,^(Spotify)$
 windowrule=tile,^(Spotify)$
-windowrule=opacity 0.95 0.9,Alacritty
-windowrule=opacity 0.95 0.9,Code
-windowrule=opacity 0.95 0.9,WebCord
-windowrule=opacity 0.95 0.9,^(nemo)$
-windowrule=opacity 0.95 0.9,^(Wing 101)$
-windowrule=opacity 0.95 0.9,^(Bitwarden)$
-# windowrule=opacity 0.95 0.9,^(firefox)$
+windowrule=opacity 0.8,Alacritty
+windowrule=opacity 0.8,Code
+windowrule=opacity 0.8,WebCord
+windowrule=opacity 0.8,^(nemo)$
+windowrule=opacity 0.8,^(Wing 101)$
+windowrule=opacity 0.8,^(Bitwarden)$
+#windowrule=opacity 0.8,^(firefox)$
 
 blurls=hyprpaper
 
