Final blur commit maybe?

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -121,15 +121,15 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-windowrule=opacity 0.85,^(Spotify)$
+windowrule=opacity 0.85 0.9,^(Spotify)$
 windowrule=tile,^(Spotify)$
-windowrule=opacity 0.85,Alacritty
-windowrule=opacity 0.85,Code
-windowrule=opacity 0.85,WebCord
-windowrule=opacity 0.85,^(nemo)$
-windowrule=opacity 0.85,^(Wing 101)$
-windowrule=opacity 0.85,^(Bitwarden)$
-#windowrule=opacity 0.85,^(firefox)$
+windowrule=opacity 0.85 0.9,Alacritty
+windowrule=opacity 0.85 0.9,Code
+windowrule=opacity 0.85 0.9,WebCord
+windowrule=opacity 0.85 0.9,^(nemo)$
+windowrule=opacity 0.85 0.9,^(Wing 101)$
+windowrule=opacity 0.85 0.9,^(Bitwarden)$
+#windowrule=opacity 0.85 0.9,^(firefox)$
 
 blurls=hyprpaper
 
