--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,6 +23,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
+exec-once = mako
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
