--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,7 +20,8 @@ monitor=eDP-1,1920x1080@60,auto,1
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
-exec-once = hyprpaper
+#exec-once = hyprpaper
+exec-once = mpvpaper -o "no-audio --loop" '*' ~/Videos/nightstudyroom.mp4
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 exec-once = mako
