--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,7 +21,8 @@ exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTO
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
 #exec-once = hyprpaper
-exec-once = mpvpaper -o "no-audio --loop" '*' ~/Videos/nightstudyroom.mp4
+#exec-once = mpvpaper -o "no-audio --loop" '*' ~/Videos/nightstudyroom.mp4
+exec-once = ~/.config/hypr/scripts/mpvpapersave.sh
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 exec-once = mako
