--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,6 +12,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1080@60,auto,1
+monitor=eDP-1,3840x2160@60,auto,2
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
