--- a/sddm.conf.d/sddm.conf
+++ b/sddm.conf.d/sddm.conf
@@ -1,2 +1,11 @@
 [Theme]
 Current=catppuccin-mocha
+
+[Wayland]
+
+EnableHiDPI=true
+
+[X11]
+
+EnableHiDPI=true
+ServerArguments=-nolisten tcp -dpi 168
