Switch back to static wallpapers

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,9 +21,8 @@ monitor=eDP-1,3840x2160@60,auto,2
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
-#exec-once = hyprpaper
-#exec-once = mpvpaper -o "no-audio --loop" '*' ~/Videos/nightstudyroom.mp4
-exec-once = ~/.config/hypr/scripts/mpvpapersave.sh
+exec-once = hyprpaper
+#exec-once = ~/.config/hypr/scripts/mpvpapersave.sh
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 exec-once = mako
