--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,11 +1,12 @@
 #preload = ~/Pictures/romb.png
-preload = ~/Pictures/bgwallpaper.png
+#preload = ~/Pictures/bgwallpaper.png
+preload = ~/Pictures/nightstudyroom.jpg
 
 # .. more preloads
 
 #wallpaper = eDP-1,~/Pictures/romb.png
-wallpaper = eDP-1,~/Pictures/bgwallpaper.png
-wallpaper = HDMI-A-1,~/Pictures/bgwallpaper.png
+wallpaper = eDP-1,~/Pictures/nightstudyroom.jpg
+wallpaper = HDMI-A-1,~/Pictures/nightstudyroom.jpg
 ipc = off
 
 # .. more monitors
