Change electron shit to 4k

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -127,6 +127,8 @@ windowrule=opacity 0.85 0.9,WebCord
 windowrule=opacity 0.85 0.9,^(nemo)$
 windowrule=opacity 0.85 0.9,^(Wing 101)$
 windowrule=opacity 0.85 0.9,^(Bitwarden)$
+windowrule=opacity 0.85 0.9,code-url-handler
+windowrule=opacity 0.85 0.9,Electron
 
 blurls=hyprpaper
 
