--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,7 +19,9 @@ monitor=eDP-1,3840x2160@60,auto,2
 # Execute your favorite apps at launch
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = waybar
+exec-once = eww daemon
+exec-once = eww open bar
+exec-once = eww open barone
 exec-once = hyprpaper
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
