--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,9 +19,7 @@ monitor=eDP-1,3840x2160@60,auto,2
 # Execute your favorite apps at launch
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = eww daemon
-exec-once = eww open bar
-exec-once = eww open barone
+exec-once = waybar
 exec-once = hyprpaper
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
@@ -147,7 +145,7 @@ bind = $mainMod, R, exec,wofi --show drun -I -m -i
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = ,xf86monbrightnessup,exec,brightnessctl set 5%+
-bind = ,xf86monbrightnessdown,exec,brightnessctl set 1%-
+bind = ,xf86monbrightnessdown,exec,brightnessctl set 5%-
 bind = SUPER_ SHIFT, S, exec, grim -g "$(slurp)"
 bind = $mainMod, L, exec, gtklock
 bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify
