--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -127,6 +127,7 @@ windowrule=opacity 0.85 0.9,WebCord
 windowrule=opacity 0.85 0.9,^(nemo)$
 windowrule=opacity 0.85 0.9,^(Wing 101)$
 windowrule=opacity 0.85 0.9,^(Bitwarden)$
+windowrule=opacity 0.85 0.9,^()$
 windowrule=opacity 0.85 0.9,code-url-handler
 windowrule=opacity 0.85 0.9,Electron
 
@@ -148,7 +149,7 @@ bind = ,xf86monbrightnessup,exec,brightnessctl set 5%+
 bind = ,xf86monbrightnessdown,exec,brightnessctl set 5%-
 bind = SUPER_ SHIFT, S, exec, grim -g "$(slurp)"
 bind = $mainMod, L, exec, gtklock
-bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify
+bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify --enable-features=UseOzonePlatform --ozone-platform=wayland
 
 # audio
 bind=,XF86AudioPlay,exec,playerctl --player=playerctld play-pause
