--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -149,7 +149,8 @@ bind = ,xf86monbrightnessup,exec,brightnessctl set 5%+
 bind = ,xf86monbrightnessdown,exec,brightnessctl set 5%-
 bind = SUPER_ SHIFT, S, exec, grim -g "$(slurp)"
 bind = $mainMod, L, exec, gtklock
-bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify --enable-features=UseOzonePlatform --ozone-platform=wayland
+#bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify
 
 # audio
 bind=,XF86AudioPlay,exec,playerctl --player=playerctld play-pause
