--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -52,7 +52,7 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = $lavender
+    col.active_border = $pink
     col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
