--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,12 +1,15 @@
 #preload = ~/Pictures/romb.png
 #preload = ~/Pictures/bgwallpaper.png
-preload = ~/Pictures/nightstudyroom.jpg
+#preload = ~/Pictures/nightstudyroom.jpg
+preload = ~/Pictures/betterpiano.jpg
 
 # .. more preloads
 
 #wallpaper = eDP-1,~/Pictures/romb.png
-wallpaper = eDP-1,~/Pictures/nightstudyroom.jpg
-wallpaper = HDMI-A-1,~/Pictures/nightstudyroom.jpg
+#wallpaper = eDP-1,~/Pictures/nightstudyroom.jpg
+#wallpaper = HDMI-A-1,~/Pictures/nightstudyroom.jpg
+wallpaper = eDP-1,~/Pictures/betterpiano.jpg
+wallpaper = HDMI-A-1,~/Pictures/betterpiano.jpg
 ipc = off
 
 # .. more monitors
