--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,3840x2160@60,auto,2
-
+monitor=HDMI-A-1,1920x1080@60,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -23,6 +23,9 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
+exec-once = wlsunset -l 43.7 -L -79.3
+exec-once = dunst
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -110,7 +113,7 @@ device:epic mouse V1 {
 }
 
 misc {
-    no_vfr = false
+    vrr: 1
 }
 
 # Example windowrule v1
@@ -125,6 +128,7 @@ windowrule=opacity 0.85 0.9,Alacritty
 windowrule=opacity 0.85 0.9,Code
 windowrule=opacity 0.85 0.9,WebCord
 windowrule=opacity 0.85 0.9,^(nemo)$
+#windowrulev2 = opaque,class:^(nemo)$,title: ""
 windowrule=opacity 0.85 0.9,^(Wing 101)$
 windowrule=opacity 0.85 0.9,^(Bitwarden)$
 windowrule=opacity 0.85 0.9,^()$
@@ -139,7 +143,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+#bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec,wofi --show drun -I -m -i
@@ -149,8 +153,9 @@ bind = ,xf86monbrightnessup,exec,brightnessctl set 5%+
 bind = ,xf86monbrightnessdown,exec,brightnessctl set 5%-
 bind = SUPER_ SHIFT, S, exec, grim -g "$(slurp)"
 bind = $mainMod, L, exec, gtklock
-#bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify --enable-features=UseOzonePlatform --ozone-platform=wayland
-bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so:/lib/spotify-adblock.so spotify
+bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so spotify --enable-features=UseOzonePlatform --ozone-platform=wayland
+#bind = $mainMod, S, exec, LD_PRELOAD=~/GitHub/spotifywm/spotifywm.so spotify
+#bind = $mainMod, N, exec, swaync-client -t -sw
 
 # audio
 bind=,XF86AudioPlay,exec,playerctl --player=playerctld play-pause
