Use fontless for starship 2

--- a/starship.toml
+++ b/starship.toml
@@ -2,7 +2,7 @@
 full_symbol = "• "
 charging_symbol = "⇡ "
 discharging_symbol = "⇣ "
-unknown_symbol = "❓ "
+unknown_symbol = "⇡ "
 empty_symbol = "❗ "
 
 [erlang]
